# eco-estate-ai-assistant

./: README.md  main.py  pyproject.toml  setup.py
src/: __init__.py
src/eco_estate_ai/: __init__.py  assistant.py  const.py  detector.py  embedder.py  factory.py  storage.py
src/eco_estate_ai/data/: qa_pairs.json
src/tests/: test_assistant.py
src/utils/: const.py
